--- a/src/ui/newtab/index.html
+++ b/src/ui/newtab/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://github.githubassets.com/assets/frameworks-02a3eaa24db2bd1ed9b64450595fc2cf.css" rel="stylesheet">
 </head>
 <body>
     <div id="app"></div>
